--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/Charves-dev/ESupply#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "react": "^18.3.1",
     "mariadb": "^2.5.5",
-    "cors": "^2.8.5"
+    "multer": "^1.4.5-lts.1",
+    "react": "^18.3.1"
   }
 }
