--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "mariadb": "^2.5.5",
     "multer": "^1.4.5-lts.1",
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "xml-digester": "^0.0.5"
   }
 }
