--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mariadb": "^2.5.5",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "xml-digester": "^0.0.5"
   }
 }
